--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{display: flex;
 .header-section {display: flex; justify-content: space-between; align-items: center;
     padding: 0 30px 50px 30px; background-color: #1f2937; color: white;
     }
+.logo {font-size: 24px; color: #f9faf8;}
 .header-links {display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;}
@@ -22,19 +23,30 @@ a {
     text-decoration: none;
     color: white;
 }
-
-.hero-image{height: 100px; width: 200px; background-color: gray;}
+.left {max-width: 50%; flex: 1 1 0;}
+.hero {font-size: 48px; font-weight: bolder; color: #F9faf8; }
+.secondary-hero {font-size: 18px; color: #e5e7eb;}
+.hero-image{height: 300px; width:400px; background-color: gray; flex: 1 0 0; margin: 30px;
+    text-align: center;
+}
+h1 {font-size: 36px; font-weight: bolder; color: #1f2937;}
+.quote { font-size: 36px; font-style: italic; color: #1f2937; text-align: center;}
+.end-quote {align-self: flex-end; padding-right: 50px; margin: -20px 20px 20px 20px; font-weight: bolder;}
 
 .section-1 {display: flex; justify-content: space-around;align-items: center; background-color: #1f2937; color: white;
-padding:30px 0px}
+padding:30px}
 .section-2 {display: flex;flex-direction: column; justify-content: center; align-items: center;}
 .section-3 {display: flex; flex-direction: column; justify-content: center; align-items: center;background-color: #e5e7eb;}
 .section-4 {display: flex; flex-direction: row; justify-content: center; align-items: center; }
+.cta-box {height:100px; width: 600px; display: flex; justify-content: space-around; align-items: center; background-color: #3882f6; border-radius: 25px; margin: 20px;}
 
 .boxes {display: flex; justify-content: space-between; align-items:flex-start;}
 .one-box {display: flex;flex-direction: column; margin: 10px;}
-.box  {width: 100px; height: 100px; border: 5px solid lightskyblue;}
-
+.box  {width: 150px; height: 150px; border: 5px solid lightskyblue; border-radius: 25px;}
+.caption {text-align: center;}
+button {border-radius: 5px; padding: 5px 10px; color: white; background-color: #3882f6; border: none;
+}
+.booty {border: 1px solid white;}
 .footer {display: flex; justify-content: center; align-items: center; background-color: #1f2937; color: white;}
 
 .one-box{display:flex}
